[FLINK-34930] Enable module opens for tests for newer JDKs