@@ -66,6 +66,10 @@ under the License.
 
 		<!-- For directory plugin -->
 		<flink.parent.artifactId>flink-connector-kudu-parent</flink.parent.artifactId>
+		<surefire.module.config>
+			--add-opens=java.base/java.lang=ALL-UNNAMED
+			--add-opens=java.base/java.util=ALL-UNNAMED
+		</surefire.module.config>
 	</properties>
 
 	<modules>
